--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">충북 코로나 동선 앱</string>
-    <string name="title_home">Home</string>
+    <string name="title_path_history">Path history</string>
     <string name="title_location">Location</string>
     <string name="title_data">Data</string>
     <string name="title_setting">Setting</string>
